7.1.4
- Fix deadlock while reconnecting to backend after a backend response timeout (Fixes #465)
- Refactor subscription seek code

7.1.3
- Withdraw v7.1.2 due to new deadlocks it introduces, for example during initial connect to backend.

7.1.2
- Fix deadlock while reconnecting to backend after a backend response timeout (Fixes #465)

7.1.1
- Fix 'provider name' and 'device status' signal status values after update to PVR API 7.0.0

7.1.0
- Add new setting value for recordings lifetime of timers created by Kodi: 'Use backend setting"
- Change default value for 'lifetime' setting from '3 months' to 'Use backend setting' to
  avoid unintended loss of data
- Enforce reset of default value for lifetime' to 'Use backend setting' to avoid unintended loss
  of data for existing addon configurations

7.0.1
- Fix hang during addon stop

7.0.0
- Update PVR API 7.0.0
- Rework addon to support new API interface
- Code cleanup to match a clang format
- Change settings.xml to new Kodi format

6.1.1
- fix disconnect on sleep

6.1.0
- Add wake-on-lan

6.0.0
- Update PVR API 6.5.1
- Update Global API 1.2.0

5.5.0
- Add support for recording file size (HTSP v35)

5.4.8
- Update PVR API 6.5.0

5.4.7
- Update PVR API 6.4.0

5.4.6
- Minor cleanups

5.4.5
- Update PVR API 6.3.0

5.4.4
- Update Debian build code
- Update with some minor cleanups
- Add license name and source url to addon.xml
- Add GPL2+ license file and show GPL2+ on README.md

5.4.3
- Fixed pointer to freed memory in EPG_TAG.strFirstAired

5.4.2
- Update PVR API 6.2.0

5.4.1
- Avoid using zero when season/episode information is not present

5.4.0
- Add HTTPS connection option

5.3.4
- Replace AppVeyor with Azure for test build (better performance)
- Add p8-platform to addon depends instead of from kodi
- Updated language files from Transifex

5.3.3
- Updated language files from Transifex

5.3.2
- Updated language files from Transifex

5.3.1
- Updated language files from Transifex

5.3.0
- Code cleanup